--- a/part1/src/scss/global.scss
+++ b/part1/src/scss/global.scss
@@ -1,8 +1,14 @@
 @charset 'utf-8';
 
+@import './font.scss';
+
 :root {
   --red: #ea7664;
   --blue: #544f4f;
   --brown: #89757a;
   --beige: #f6f5f5;
+}
+
+body {
+  font-family: 'Nanum';
 }
