--- a/part1/src/components/shared/FullScreenMessage.module.scss
+++ b/part1/src/components/shared/FullScreenMessage.module.scss
@@ -21,8 +21,11 @@
   0% {
     transform: scale(1);
   }
-  5% {
+  1% {
     transform: scale(1.2);
+  }
+  2% {
+    transform: scale(1);
   }
   10% {
     transform: scale(1);
